--- a/main.html
+++ b/main.html
@@ -45,8 +45,8 @@
             <img src="./assets/header.png" class="img-fluid " alt="" style="max-height: 450px ;">
           </div>
        
-          <div class="col-lg-6 col-12 pe-3 ps-0 text-light hero-content">
-            <div style="z-index: 1; padding-inline-end: 12px;">
+          <div class="col-lg-6 col-12 pe-3 text-light hero-content">
+            <div style="z-index: 1; ">
             <h1 class="px-0 pt-5 mx-lg-0 w-100">
               Smart technology vision
               <span style="color: #ffd26c; font-weight: 700">2024</span>
@@ -68,7 +68,7 @@
             <button class="btn btn-yellow">
               <span>Register for <b class="ms-1 me-1">free</b> now!</span>
             </button>
-            <div class="d-flex">
+            <div class="d-flex row-icon">
               <div class="d-flex flex-row align-items-center">
                 <svg width="30" height="30" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <g id="ion:calendar-sharp">
@@ -134,6 +134,12 @@
       <svg xmlns="http://www.w3.org/2000/svg" class="hero-content-svg-4 d-lg-flex d-md-none d-none" width="599" height="59" viewBox="0 0 599 59" fill="none">
         <path d="M592.833 3.5C592.833 4.97276 594.027 6.16667 595.5 6.16667C596.973 6.16667 598.167 4.97276 598.167 3.5C598.167 2.02724 596.973 0.833333 595.5 0.833333C594.027 0.833333 592.833 2.02724 592.833 3.5ZM595.5 56V56.5H596V56H595.5ZM0.833333 56C0.833333 57.4728 2.02724 58.6667 3.5 58.6667C4.97276 58.6667 6.16667 57.4728 6.16667 56C6.16667 54.5272 4.97276 53.3333 3.5 53.3333C2.02724 53.3333 0.833333 54.5272 0.833333 56ZM595 3.5V56H596V3.5H595ZM595.5 55.5H3.5V56.5H595.5V55.5Z" fill="#FFD26C"/>
       </svg>
+      <!-- <svg xmlns="http://www.w3.org/2000/svg" class="under-sm-svg-3 d-lg-none d-flex  d-md-none" width="325" height="18" viewBox="0 0 325 18" fill="none">
+        <path d="M5.66666 3.47168C5.66666 4.94444 4.47275 6.13835 3 6.13835C1.52725 6.13835 0.333344 4.94444 0.333344 3.47168C0.333344 1.99892 1.52725 0.805013 3 0.805013C4.47275 0.805013 5.66666 1.99892 5.66666 3.47168ZM3 14.5V15H2.5V14.5H3ZM324.667 14.5C324.667 15.9728 323.473 17.1667 322 17.1667C320.527 17.1667 319.333 15.9728 319.333 14.5C319.333 13.0272 320.527 11.8333 322 11.8333C323.473 11.8333 324.667 13.0272 324.667 14.5ZM3.5 3.47168V14.5H2.5V3.47168H3.5ZM3 14H322V15H3V14Z" fill="white"/>
+      </svg> -->
+      <svg xmlns="http://www.w3.org/2000/svg" class="under-sm-svg-3 d-lg-none d-none  d-md-flex" width="650" height="29" viewBox="0 0 650 29" fill="none">
+        <path d="M5.66669 3C5.66669 4.47276 4.47278 5.66667 3 5.66667C1.52722 5.66667 0.333313 4.47276 0.333313 3C0.333313 1.52724 1.52722 0.333333 3 0.333333C4.47278 0.333333 5.66669 1.52724 5.66669 3ZM3 25.5V26H2.5V25.5H3ZM649.667 25.5C649.667 26.9728 648.473 28.1667 647 28.1667C645.527 28.1667 644.333 26.9728 644.333 25.5C644.333 24.0272 645.527 22.8333 647 22.8333C648.473 22.8333 649.667 24.0272 649.667 25.5ZM3.5 3V25.5H2.5V3H3.5ZM3 25H647V26H3V25Z" fill="white"/>
+      </svg>
     </section>
 
     <section>
@@ -164,7 +170,7 @@
       <svg xmlns="http://www.w3.org/2000/svg" class ="d-none d-md-flex d-lg-none left-md-svg-3" width="6" height="357" viewBox="0 0 6 357" fill="none">
         <path d="M0.333333 3C0.333333 4.47276 1.52724 5.66667 3 5.66667C4.47276 5.66667 5.66667 4.47276 5.66667 3C5.66667 1.52724 4.47276 0.333333 3 0.333333C1.52724 0.333333 0.333333 1.52724 0.333333 3ZM0.333349 354C0.333349 355.473 1.52726 356.667 3.00002 356.667C4.47277 356.667 5.66668 355.473 5.66668 354C5.66668 352.527 4.47277 351.333 3.00002 351.333C1.52726 351.333 0.333349 352.527 0.333349 354ZM2.5 3L2.50002 354L3.50002 354L3.5 3L2.5 3Z" fill="#FFD26C"/>
       </svg>
-      <svg xmlns="http://www.w3.org/2000/svg" class="left-svg-3 d-lg-flex d-none  d-md-none"width="7" height="53" viewBox="0 0 7 53" fill="none">
+      <svg xmlns="http://www.w3.org/2000/svg" class="left-svg-3 d-lg-flex d-none  d-md-none" width="7" height="53" viewBox="0 0 7 53" fill="none">
         <path d="M0.833333 3C0.833333 4.47276 2.02724 5.66667 3.5 5.66667C4.97276 5.66667 6.16667 4.47276 6.16667 3C6.16667 1.52724 4.97276 0.333333 3.5 0.333333C2.02724 0.333333 0.833333 1.52724 0.833333 3ZM0.833333 50C0.833333 51.4728 2.02724 52.6667 3.5 52.6667C4.97276 52.6667 6.16667 51.4728 6.16667 50C6.16667 48.5272 4.97276 47.3333 3.5 47.3333C2.02724 47.3333 0.833333 48.5272 0.833333 50ZM3 3V50H4V3H3Z" fill="#FFD26C"/>
       </svg>
       <div class="d-flex justify-content-center">
